# SchemeGuardian

./: .gitignore  CHANGLELOG.md  Cargo.toml  Features.md  README.md  SchemeGuardian.toml  TODO
RAW/: Overview-free_mind.mm  README.md  ROADMAP.md  Schemes.md  boring.rs  features.md
lib/: Cargo.toml
lib/SchemeGuardian/: SchemeGuardian.toml
lib/SchemeGuardian/SchemeGuardianSecrets/secrets_kv_db/: db  snap.000000000000089A
lib/src/: config.rs  engine.rs  errors.rs  storage.rs  tokens.rs
sgb/: .gitignore  Cargo.toml
sgb/src/: main.rs
src/: branca_engine.rs  config.rs  csprng.rs  engine.rs  errors.rs  garbage_collector.rs  global.rs  lib.rs  main.rs  passphrase_engine.rs  storage.rs  tokens.rs
src/auth_state/: global.rs  mod.rs
src/passphrase/: mod.rs  passphrase_engine.rs
src/secrets/: auth_storage.rs  branca_engine.rs  cookies_engine.rs  csprng.rs  engine.rs  mod.rs  passphrase_engine.rs  secrets_engine.rs
src/sg_statics/: datetime.rs  keys.rs  mod.rs
src/storage/: file_storage.rs  mod.rs  secrets.rs
src/tokens/: mod.rs  prng.rs
tests/: create.rs  fetch.rs
