[package]
name = "schemeguardian"
version = "0.3.0-alpha.1"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Secrets Authentication, Encryption and Verification Engine with Key-Value Store"
homepage = "https://github.com/charleschege/SchemeGuardian"
repository = "https://github.com/charleschege/SchemeGuardian"
license = "Apache-2.0"
keywords = ["encryption", "data-protection", "autonomous-secrets", "privacy", "embedded-security"]
categories = ["cryptography", "authentication", "embedded", "web-programming"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
blake3 = "0.3.4"
serde = { version = "1.0.114", features = ["derive"] }
bincode = "1.3.1"
tai64 = { features = ["serde", "zeroize"], path = "../iqlusion/crates/tai64" }
secrecy = { version = "0.6.0", features = ["serde"] }
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
custom_codes = { path = "../custom_codes" }
rand = "0.7.3"
rust-argon2 = "0.8.2"
toml = "0.5.6"
anyhow = "1.0.31"
timelite = "1.0.4"
futures-lite = "0.1.5"
async-dup = "1.0.1"
hex = "0.4.2"
turingdb = { path = "../TuringDB/TuringDB" }
async-lock = "1.1.4"
async-trait = "0.1.36"
multitask = "0.2.0"
blocking = "0.4.6"
async-io = "0.1.2"
#queue-file2 = { path = "../queue-file2" }
#hreq = { version = "", features = ["tls", "smol", "gzip"] }
#blocking = "0.4.6"
#constant_time_eq = "0.1.5"
#jemallocator = "0.3.2"
#aead = "0.3.1"
#data-encoding = "2.2.1"