[package]
name = "schemeguardian"
version = "0.3.0-alpha.1"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Secrets Authentication, Encryption and Verification Engine with Key-Value Store"
homepage = "https://github.com/charleschege/SchemeGuardian"
repository = "https://github.com/charleschege/SchemeGuardian"
license = "Apache-2.0"
keywords = ["encryption", "data-protection", "autonomous-secrets", "privacy", "embedded-security"]
categories = ["cryptography", "authentication", "embedded", "web-programming"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
blake3 = "0.3.7"
serde = { version = "1.0.118", features = ["derive"] }
tai64 = { features = ["serde", "zeroize"], path = "../iqlusion/crates/tai64" }
secrecy = { version = "0.7.0", features = ["serde"] }
zeroize = { version = "1.2.0", features = ["zeroize_derive"] }
custom_codes = "2.0.4"
rust-argon2 = "0.8.3"
toml = "0.5.7"
anyhow = "1.0.35"
timelite = "1.0.4"
futures-lite = "1.11.2"
async-dup = "1.2.2"
hex = "0.4.2"
turingdb = "2.0.0"
async-lock = "2.3.0"
async-trait = "0.1.42"
async-io = "1.3.1"
async-fs = "1.5.0"
nanorand = "0.5.1"
bincode = "1.3.1"
#queue-file2 = { path = "../queue-file2" }
#hreq = { version = "", features = ["tls", "smol", "gzip"] }
#blocking = "0.4.6"
#constant_time_eq = "0.1.5"
#jemallocator = "0.3.2"
#aead = "0.3.1"
#data-encoding = "2.2.1"